commiting in root; fixed mistake

--- a/code.html
+++ b/code.html
@@ -54,7 +54,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="http://pantrydotio.herokuapp.com/">
-        <img class="image" src="/images/pantry.io_min.png">
+        <img class="image" src="/images/pantry.io.png">
       </a>
     </div>
 
@@ -67,7 +67,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="https://tttcmyk.pancakeapps.com/">
-        <img id="ex_2" class="image" src="/images/tictactoe_cmyk.png">
+        <img class="image" src="/images/tttcmyk.png">
       </a>
     </div>
 
