testing name size

--- a/code.html
+++ b/code.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <p id="name">P. Chubinskiy</p>
+    <p id="name" class="col-lg-12">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
@@ -31,7 +31,7 @@
     </div>
 
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using the Last.fm's API and D3.js for week 12/12 of a web development course.</p>
+      <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using Last.fm's API and D3.js for week 12/12 of a web development course.</p>
       <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
     </div>
   </div>
