testing name size

--- a/code.html
+++ b/code.html
@@ -11,8 +11,8 @@
   <script type="text/javascript" src="/javascripts/code.js"></script>
 </head>
 <body>
-  <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
-    <p id="name" class="col-lg-12">P. Chubinskiy</p>
+  <div id="menubar" class="row col-lg-2 col-md-2 col-sm-2 col-xs-12">
+    <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
