--- a/artdesign.html
+++ b/artdesign.html
@@ -19,7 +19,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/oncuecover2.jpg">
-          <img class="image" src="/images/oncuecover2_min.jpg" style="">
+          <img class="artdesign" src="/images/oncuecover2_min.jpg" style="">
         </a>
       </div>
 
@@ -48,7 +48,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/wccccatering.png">
-          <img class="image" src="/images/wccccatering_min.png" style="">
+          <img class="artdesign" src="/images/wccccatering_min.png" style="">
         </a>
       </div>
 
@@ -61,7 +61,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/wccclogoletters.png">
-          <img class="image" src="/images/wccclogoletters_min.png" style="">
+          <img class="artdesign" src="/images/wccclogoletters_min.png" style="">
         </a>
       </div>
 
@@ -74,7 +74,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/collage.jpg">
-          <img class="image" src="/images/collage_min.jpg" style="">
+          <img class="artdesign" src="/images/collage_min.jpg" style="">
         </a>
       </div>
 
@@ -87,7 +87,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/bw_figure_full.jpg">
-          <img class="image" src="/images/bw_figure_min.jpg" style="">
+          <img class="artdesign" src="/images/bw_figure_min.jpg" style="">
         </a>
       </div>
 
@@ -100,7 +100,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="/images/artdesign_fullsize/bw_figure2_full.jpg">
-          <img class="image" src="/images/bw_figure2_min.jpg" style="">
+          <img class="artdesign" src="/images/bw_figure2_min.jpg" style="">
         </a>
       </div>
 
@@ -138,7 +138,7 @@
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-           <iframe class="film" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+           <iframe class="artdesign" src="https://player.vimeo.com/video/158437381" width="300" height="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
