--- a/artdesign.html
+++ b/artdesign.html
@@ -4,8 +4,33 @@
   <title></title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
   <link href="/stylesheets/artdesign.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css"
-  href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"/>
+
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="">
+  <meta name="author" content="">
+  <link rel="icon" href="../../favicon.ico">
+
+  <!-- Bootstrap core CSS -->
+  <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+  <link href="/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+
+  <!-- Custom styles for this template -->
+  <link href="/stylesheets/jumbotron-narrow.css" rel="stylesheet">
+
+  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
+  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+  <script src="/bootstrap/assets/js/ie-emulation-modes-warning.js"></script>
+
+  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+  <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
 <body>
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
@@ -147,17 +172,21 @@
       </div>
     </div>
 
-<!--     <img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
+    <!--<img src="/images/noexitcover.jpg" style="" class="col-lg-12 col-md-12 col-md-12 col-sm-12 col-xs-12">
     <span style="display: block;">* change the font here *</span>
     <img src="collage.jpg" style="width: 40%;">
     <img src="/images/wccccatering.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
     <img src="/images/wccclogoletters.png" style="" class="col-lg-6 col-md-6 col-md-6 col-sm-6 col-xs-6">
 
      <iframe id="film" src="https://player.vimeo.com/video/126012689" class="" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-    <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
- -->
-      <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-        <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Paul Chubinskiy.</p>
-      </div>
+    <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>-->
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Paul Chubinskiy &copy;</p>
+    </div>
+
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
