--- a/code.html
+++ b/code.html
@@ -41,7 +41,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6">
       <a href="http://lastichecked.herokuapp.com/">
-        <img class="" src="/images/lastichecked.png">
+        <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
           <p class="in-progress-text">In Progress...</p>
         </div> -->
