--- a/code.html
+++ b/code.html
@@ -39,7 +39,7 @@
 
   <!-- add a mobile-responsive png-->
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://lastichecked.herokuapp.com/">
         <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
@@ -55,7 +55,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="https://w09wdiproj.herokuapp.com/">
         <img class="image" src="/images/w09_wdiproj3.png">
       </a>
@@ -70,7 +70,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://pantrydotio.herokuapp.com/">
         <img class="image" src="/images/pantry.io.png">
       </a>
@@ -83,7 +83,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="https://tttcmyk.pancakeapps.com/">
         <img class="image" src="/images/tttcmyk.png">
       </a>
@@ -96,7 +96,7 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6">
+    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://www.lrngo.com/coolstuff">
         <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
       </a>
