--- a/code.html
+++ b/code.html
@@ -152,6 +152,6 @@
 
   <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
