--- a/code.html
+++ b/code.html
@@ -41,7 +41,7 @@
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
     <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
       <a href="http://lastichecked.herokuapp.com/">
-        <img class="image" src="/images/lastichecked.png">
+        <img class="" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
           <p class="in-progress-text">In Progress...</p>
         </div> -->
@@ -152,6 +152,6 @@
 
   <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+  <script src="/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
