--- a/code.html
+++ b/code.html
@@ -4,32 +4,9 @@
   <title>Code</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
 
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="icon" href="../../favicon.ico">
-
-  <!-- Bootstrap core CSS -->
-  <link href="/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <link href="/bootstrap/assets/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
-
-  <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-  <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-  <script src="/bootstrap/assets/js/ie-emulation-modes-warning.js"></script>
-
-  <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-  <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-  <![endif]-->
 </head>
 <body>
-  <div id="menubar" class="row col-lg-2 col-md-2 col-sm-2 col-xs-12">
+  <div id="menubar">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
@@ -38,8 +15,8 @@
   </div>
 
   <!-- add a mobile-responsive png-->
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+  <div id="content" class="">
+    <div class="">
       <a href="http://lastichecked.herokuapp.com/">
         <img class="image" src="/images/lastichecked.png">
         <!-- <div class="coming_soon">
@@ -48,110 +25,12 @@
       </a>
     </div>
 
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <p class="annotation"><a href="http://lastichecked.herokuapp.com/">Final Project</a> using Last.fm's API and D3.js for week 12/12 of a web development course.</p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/wdi3_final_project">wdi3_final_project</a></p>
-    </div>
-  </div>
-
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <a href="https://w09wdiproj.herokuapp.com/">
-        <img class="image" src="/images/w09_wdiproj3.png">
-      </a>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <p class="annotation">Real-time, full-stack <a href="https://w09wdiproj.herokuapp.com/">Node.js survey application</a> I made for week 09/12 of a web development course.</p>
-      <p>Source code & documentation:
-        <a href="https://github.com/pchubinskiy/w09_wdiproj">w09_wdiproj</a>
-      </p>
-    </div>
-  </div>
-
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <a href="http://pantrydotio.herokuapp.com/">
-        <img class="image" src="/images/pantry.io_min.png">
-      </a>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <p class="annotation">Full-stack <a href="http://pantrydotio.herokuapp.com/">Rails app</a> for week 06/12 of WDI.</p>
-      <p class="">Source code & documentation: <a href="https://github.com/pchubinskiy/pantry">pantry</a></p>
-    </div>
-  </div>
-
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <a href="https://tttcmyk.pancakeapps.com/">
-        <img class="image" src="/images/tttcmyk.png">
-      </a>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <p class="annotation"><a href="https://tttcmyk.pancakeapps.com/">Tic Tac Toe app</a> I made when learning about JavaScript and jQuery.</p>
-      <p>Source code & documentation: <a href="https://github.com/pchubinskiy/tictactoe_nonrefactored">tictactoe_nonrefactored</a></p>
-    </div>
-  </div>
-
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <a href="http://www.lrngo.com/coolstuff">
-        <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
-      </a>
-    </div>
-
-    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-      <p class="annotation">
-        <a href="http://www.lrngo.com/coolstuff">Landing pages I designed.</a>
-      </p>
-    </div>
-  </div>
-
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-    <a href="http://www.lrngo.com/coolstuff">
-      <img class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
-    </a>
-    <a href="http://www.lrngo.com/coolstuff">
-      <img class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
-    </a>
-
-    <a href="http://www.lrngo.com/music-arts">
-      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
-    </a>
-    <a href="http://www.lrngo.com/music-arts">
-      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
-    </a>
-    <a href="http://www.lrngo.com/music-arts">
-      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
-    </a>
-    <a href="http://www.lrngo.com/music-arts">
-      <img class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
-    </a>
-
-    <a href="http://www.lrngo.com/sports-fitness">
-      <img class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
-    </a>
-    <a href="http://www.lrngo.com/sports-fitness">
-      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
-    </a>
-
-    <a href="http://www.lrngo.com/sports-fitness">
-      <img class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
-    </a>
-    <a href="http://www.lrngo.com/sports-fitness">
-      <img class="botmost-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
-    </a>
-    </div>
 
   <div id="whitespace">
     <br>
     <br>
   </div>
 
-  <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
-  <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-  <script src="/bootstrap/assets/js/ie10-viewport-bug-workaround.js"></script>
+
 </body>
 </html>
