added code.css to code page

--- a/code.html
+++ b/code.html
@@ -27,6 +27,7 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
+  <link href="/stylesheets/code.css" rel="stylesheet">
 </head>
 <body>
   <div id="menubar" class="row col-lg-2 col-md-2 col-sm-2 col-xs-12">
