experimenting with small imgs

--- a/code.html
+++ b/code.html
@@ -111,9 +111,9 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
+    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
       <a href="http://www.lrngo.com/coolstuff">
-        <img class="image2" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
+        <img class="image2 left1-mini" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
       </a>
     </div>
     <div class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
