--- a/code.html
+++ b/code.html
@@ -111,57 +111,40 @@
   </div>
 
   <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-    <div class="col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/coolstuff">
-        <img class="image2 left1-mini" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
-      </a>
+    <a href="http://www.lrngo.com/coolstuff">
+      <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
+    </a>
+    <a href="http://www.lrngo.com/coolstuff">
+      <img class="image2 left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
+    </a>
+
+    <a href="http://www.lrngo.com/music-arts">
+      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
+    </a>
+    <a href="http://www.lrngo.com/music-arts">
+      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
+    </a>
+    <a href="http://www.lrngo.com/music-arts">
+      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
+    </a>
+    <a href="http://www.lrngo.com/music-arts">
+      <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
+    </a>
+
+    <a href="http://www.lrngo.com/sports-fitness">
+      <img class="image2 left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
+    </a>
+    <a href="http://www.lrngo.com/sports-fitness">
+      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
+    </a>
+
+    <a href="http://www.lrngo.com/sports-fitness">
+      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
+    </a>
+    <a href="http://www.lrngo.com/sports-fitness">
+      <img class="image2 botmost-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
+    </a>
     </div>
-    <div class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/coolstuff">
-        <img class="image2" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
-      </a>
-    </div>
-    <div class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
-      </a>
-    </div>
-    <div class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
-      </a>
-    </div>
-    <div class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
-      </a>
-    </div>
-    <div class="left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/music-arts">
-        <img class="image2" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
-      </a>
-    </div>
-    <div class="left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
-      </a>
-    </div>
-    <div class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
-      </a>
-    </div>
-    <div class="mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
-      </a>
-    </div>
-    <div class="botmost-mini col-lg-2 col-md-2 col-sm-4 col-xs-4">
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
-      </a>
-    </div>
-  </div>
 
   <div id="whitespace">
     <br>
