--- a/code.html
+++ b/code.html
@@ -110,7 +110,7 @@
     </div>
   </div>
 
-  <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+  <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
     <a href="http://www.lrngo.com/coolstuff">
       <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
     </a>
