aligning bot_set images at md/lg

--- a/code.html
+++ b/code.html
@@ -125,7 +125,7 @@
       <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
     </a>
     <a href="http://www.lrngo.com/music-arts">
-      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
+      <img id="fifth" class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
     </a>
     <a href="http://www.lrngo.com/music-arts">
       <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
@@ -139,7 +139,7 @@
     </a>
 
     <a href="http://www.lrngo.com/sports-fitness">
-      <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
+      <img id="ninth" class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
     </a>
     <a href="http://www.lrngo.com/sports-fitness">
       <img class="image2 botmost-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
