adding copyright symbol to contact page

--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <p>email: <a href="mailto:pchubinskiy@gmail.com">pchubinskiy@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/pchubinskiy">https://www.linkedin.com/in/pchubinskiy</a></p>
     <p>Github: <a href="https://github.com/pchubinskiy">pchubinskiy</a></p>
-    <p>Copyright notice: All art and design copyright Paul Chubinskiy</p>
+    <p>Copyright notice: All art and design copyright Paul Chubinskiy &copy;</p>
     <br>
     <br>
   </div>
