--- a/artdesign.html
+++ b/artdesign.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title></title>
+  <title>Art & Design</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
   <link href="/stylesheets/artdesign.css" rel="stylesheet">
 
