adding resized images and links

--- a/code.html
+++ b/code.html
@@ -43,7 +43,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="http://lastichecked.herokuapp.com/">
-          <img class="image" src="/images/lastichecked.png">
+          <img class="image" src="/images/med/lastichecked.png">
           <!-- <div class="coming_soon">
             <p class="in-progress-text">In Progress...</p>
           </div> -->
@@ -59,7 +59,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="https://w09wdiproj.herokuapp.com/">
-          <img class="image" src="/images/w09_wdiproj3.png">
+          <img class="image" src="/images/med/w09_wdiproj3.png">
         </a>
       </div>
 
@@ -74,7 +74,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="http://pantrydotio.herokuapp.com/">
-          <img class="image" src="/images/pantry.io.png">
+          <img class="image" src="/images/med/pantry.io.png">
         </a>
       </div>
 
@@ -87,7 +87,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="https://tttcmyk.pancakeapps.com/">
-          <img class="image" src="/images/tttcmyk.png">
+          <img class="image" src="/images/med/tttcmyk.png">
         </a>
       </div>
 
@@ -100,7 +100,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="http://www.lrngo.com/coolstuff">
-          <img class="image" src="/images/lrngo_landing_pages/othercoolstuff.png">
+          <img class="image" src="/images/lrngo_landing_pages/med/othercoolstuff.png">
         </a>
       </div>
 
