--- a/code.html
+++ b/code.html
@@ -111,8 +111,8 @@
       </div>
     </div>
 
-    <!-- <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
-      <a href="http://www.lrngo.com/coolstuff">
+    <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
+      <!-- <a href="http://www.lrngo.com/coolstuff">
         <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
       </a>
       <a href="http://www.lrngo.com/coolstuff">
@@ -144,8 +144,8 @@
       </a>
       <a href="http://www.lrngo.com/sports-fitness">
         <img class="image2 botmost-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
-      </a>
-    </div> -->
+      </a> -->
+    </div>
 
     <div id="whitespace">
       <br>
