--- a/test/code.html
+++ b/test/code.html
@@ -128,22 +128,22 @@
       <a href="http://www.lrngo.com/music-arts">
         <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
       </a>
+
+      <a href="http://www.lrngo.com/coolstuff">
+        <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff.png" alt="">
+      </a>
+      <a href="http://www.lrngo.com/coolstuff">
+        <img class="image2 left2-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
+      </a>
+
       <a href="http://www.lrngo.com/music-arts">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts2.png" alt="">
+        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts3.png" alt="">
       </a>
-
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness1.png" alt="">
+      <a href="http://www.lrngo.com/music-arts">
+        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts4.png" alt="">
       </a>
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
-      </a>
-
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
-      </a>
-      <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness4.png" alt="">
+      <a href="http://www.lrngo.com/music-arts">
+        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/musicarts1.png" alt="">
       </a>
       </div>
 
