hid last image non non-lg and deleted 'botmost' class in css

--- a/code.html
+++ b/code.html
@@ -144,7 +144,7 @@
         <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness3.png" alt="">
       </a>
       <a href="http://www.lrngo.com/sports-fitness">
-        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
+        <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4 hidden-md hidden-sm hidden-xs" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
       </a>
     </div>
 
