--- a/test/code.html
+++ b/test/code.html
@@ -43,9 +43,8 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="#">
-          <div class="coming_soon image">
+          <img class="image" src="/images/med/comingsoon.png">
             <p class="in-progress-text">Coming Soon</p>
-          </div>
         </a>
       </div>
 
