added 'coming soon' to 'source code: '

--- a/code.html
+++ b/code.html
@@ -49,7 +49,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href="#"></a>Angular.js project and blog post about front-end frameworks.</p>
-        <p class="">Source code & documentation: <a href="#"></a></p>
+        <p class="">Source code & documentation: coming soon<a href="#"></a></p>
       </div>
     </div>
 
