changed on cue image to different version with copyright watermark

--- a/code.html
+++ b/code.html
@@ -116,7 +116,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">
-          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Lrngo, where I also did back-end work in PHP and Zend.</p>
+          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Lrngo, where I also did back-end work in PHP/Zend.</p>
         </p>
       </div>
     </div>
