adding margin to whitespace id

--- a/code.html
+++ b/code.html
@@ -158,7 +158,7 @@
       </a>
     </div>
 
-    <div id="whitespace">
+    <div id="whitespace" class="row">
       <br/>
       <br/>
     </div>
