testing new image and links

--- a/test/code.html
+++ b/test/code.html
@@ -43,13 +43,13 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="#">
-          <img class="image" src="/images/med/comingsoon.png">
+          <img class="image" src="/images/med/angularjsdemoapp.png">
         </a>
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="#"></a>An Angular.js project I made and a blog post about front-end frameworks.</p>
-        <p class="">Source code & documentation: coming soon<a href="#"></a></p>
+        <p class="annotation"><a href="angularjsdemoapp.herokuapp.com"></a>A basic Angular.js to-do list app. Updates coming soon.</p>
+        <p class="">Source code & documentation: angular_to_do_list<a href="github.com/angular_to_do_list"></a></p>
       </div>
     </div>
 
