adding image of IFMA sandbox site; adding IFMA work sample to portfolio; rewriting Lrngo work sample desc

--- a/code.html
+++ b/code.html
@@ -44,6 +44,18 @@
     <!-- add a mobile-responsive png-->
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="https://sandbox.ifma.org">
+          <img class="image" src="/images/med/sandbox.ifma_med.png">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation"><a href="https://sandbox.ifma.org">One of a series</a> of WordPress sites I set up and designed for Houston non-profit IFMA.</p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="https://angularjsdemoapp.herokuapp.com">
           <img class="image" src="/images/med/angularjsdemoapp.png">
         </a>
@@ -118,7 +130,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">
-          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Lrngo, where I also worked in Javascript, PHP, and Zend.</p>
+          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Houston edtech start-up Lrngo.</p>
         </p>
       </div>
     </div>
