changing code.html page name and links to 'portfolio.html'

--- a/writing.html
+++ b/writing.html
@@ -32,7 +32,7 @@
   <div id="menubar" class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
-    <p><a href="code.html">Code</a></p>
+    <p><a href="portfolio.html">Portfolio</a></p>
     <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="/pdfs/resume.pdf">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
