--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">Paul Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
-    <p><a href="code.html">Code</a></p>
+    <p><a href="portfolio.html">Portfolio</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="/pdfs/resume.pdf">Resume</a></p>
