changing code.html page name and links to 'portfolio.html'

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,7 +50,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href="https://sandbox.ifma.org">One of a series</a> of WordPress sites I set up and designed for Houston non-profit IFMA.</p>
+        <p class="annotation"><a href="https://sandbox.ifma.org">One</a> of a series (<a href="https://it.ifma.org">1</a>, <a href="https://omhs.ifma.org">2</a>, <a href="https://nola.org">3</a>...) of WordPress sites I set up and designed for Houston non-profit IFMA.</p>
       </div>
     </div>
 
