adding different resume formats

--- a/artdesign.html
+++ b/artdesign.html
@@ -36,7 +36,7 @@
     <p><a href="portfolio.html">Portfolio</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
-    <p><a href="/pdfs/resume.pdf">Resume</a></p>
+    <p><a href="resume.html">Resume</a></p>
     <p><a href="contact.html">Contact</a></p>
   </div>
 
