--- a/resume.html
+++ b/resume.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Paul Chubinskiy's Portfolio</title>
+  <title>Contact</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
 
   <meta charset="utf-8">
@@ -29,9 +29,8 @@
   <![endif]-->
 </head>
 <body>
-
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-    <p id="name">Paul Chubinskiy</p>
+    <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="portfolio.html">Portfolio</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
@@ -40,15 +39,16 @@
     <p><a href="contact.html">Contact</a></p>
   </div>
 
-  <div class="col-lg-offset-3 col-md-offset-3 col-sm-offset-4 col-xs-offset-3 col-lg-1 col-md-1 col-sm-1 col-xs-1">
-      <div id="profile_background"></div>
-      <img id="profile" src="/images/profile.jpg">
-  </div>
+  <!--<div class="col-xs-1 col-xs-offset-5 col-sm-1 col-sm-offset-5 col-md-1 col-md-offset-0 col-lg-1 col-lg-offset-0">
+    <div id="profile_background"></div>
+    <img id="profile" src="profile.jpg">
+  </div>-->
 
-  <div id="content" class="col-xs-11 col-sm-11 col-md-6 col-md-offset-1 col-lg-6 col-lg-offset-1">
-    <p>I majored in Literature and Visual Arts at Duke University, where I did literature research and completed challenging art and design projects. After graduating from college, I tutored reading and writing for college entrance exams, applied for technical writing and copy editing work, and took a web development internship with a local startup.</p>
-    <p>I got interested in web development because it rewarded patience and attention to detail and because I was excited about the potential of open source, data visualization, and using code to build educational tools. Working on real projects where I could use my writing and visual arts skills as well as my technical inclinations convinced me that I wanted to pursue a career involving web development. Inspired by this, I recently completed the Web Development Immersive program at General Assembly in Austin, TX, where I learned full-stack development.</p>
-    <p>On my free time, I enjoy watching basketball and soccer, reading and writing, listening to music, and exercising. I also like to change what I put here.</p>
+  <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
+    <p><a href="/pdfs/resume_paul_chubinskiy.pdf">PDF</a></p>
+    <p><a href="/pdfs/resume_paul_chubinskiy.docx">Word</a></p>
+    <br>
+    <br>
   </div>
 
   <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
