changing displayed name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Paul Chubinskiy's Portfolio</title>
+  <title>Pavlo Chubinskiy's Portfolio</title>
   <link href="/stylesheets/wdiexercise.css" rel="stylesheet">
 
   <meta charset="utf-8">
@@ -31,7 +31,7 @@
 <body>
 
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
-    <p id="name">Paul Chubinskiy</p>
+    <p id="name">Pavlo Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
     <p><a href="portfolio.html">Portfolio</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
