--- a/otherart.html
+++ b/otherart.html
@@ -33,7 +33,7 @@
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
-    <p><a href="portfolio.html">Portfolio</a></p>
+    <p><a href="web.html">Web</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="resume.html">Resume</a></p>
@@ -191,7 +191,7 @@
     <p><a href="https://vimeo.com/126012689">engendering</a> from <a href="https://vimeo.com/user24324093">P Chubinskiy</a> on <a href="https://vimeo.com">Vimeo</a>.</p>-->
 
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
-      <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Paul Chubinskiy &copy;</p>
+      <p class="col-lg-9 copyright">Copyright notice: All art and design copyright Pavlo Chubinskiy &copy;</p>
     </div>
 
     <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
