--- a/resume.html
+++ b/resume.html
@@ -32,7 +32,7 @@
   <div id="menubar" class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
     <p id="name">P. Chubinskiy</p>
     <p><a href="index.html">About Me</a></p>
-    <p><a href="portfolio.html">Portfolio</a></p>
+    <p><a href="web.html">Web</a></p>
     <!--<p><a href="writing.html">Writing</a></p>-->
     <p><a href="artdesign.html">Art & Design</a></p>
     <p><a href="resume.html">Resume</a></p>
