--- a/web.html
+++ b/web.html
@@ -34,7 +34,7 @@
     <div id="menubar" class="row col-lg-2 col-md-2 col-sm-2 col-xs-12">
       <p id="name">P. Chubinskiy</p>
       <p><a href="index.html">About Me</a></p>
-      <p><a href="portfolio.html">Portfolio</a></p>
+      <p><a href="web.html">Web</a></p>
       <!--<p><a href="writing.html">Writing</a></p>-->
       <p><a href="artdesign.html">Art & Design</a></p>
       <p><a href="resume.html">Resume</a></p>
