changing artdesign captions

--- a/artdesign.html
+++ b/artdesign.html
@@ -49,7 +49,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">A collage of magazine snippets designed as a book or album cover; edited in Photoshop.<a href=""></a></p>
+        <p class="">Book cover edited with Photoshop.<a href=""></a></p>
       </div>
     </div>
 
@@ -78,7 +78,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
+        <p class="">Logo for World Class Coffee Catering.<a href=""></a></p>
       </div>
     </div>
 
@@ -91,7 +91,7 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation"><a href=""></a></p>
-        <p class="">An iteration of a logo I created for World Class Coffee Catering.<a href=""></a></p>
+        <p class="">Logo for World Class Coffee Catering.<a href=""></a></p>
       </div>
     </div>
 
