images in otherart folder

--- a/otherart.html
+++ b/otherart.html
@@ -139,7 +139,7 @@
       </div>
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-        <p class="annotation"><a href=""></a></p>
+        <p class="annotation">Brand board.<a href=""></a></p>
         <p class=""><a href=""></a></p>
       </div>
     </div>
@@ -155,7 +155,57 @@
       </div>
     </div>
 
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/triptych.jpg" style="">
+        </a>
+      </div>
 
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/photo_drawing_collage.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/drawing.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
+
+    <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <a href="">
+          <img class="artdesign" src="/images/otherart/maze.jpg" style="">
+        </a>
+      </div>
+
+      <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
+        <p class="annotation">Brand board.<a href=""></a></p>
+        <p class=""><a href=""></a></p>
+      </div>
+    </div>
 
 
 
