--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
 
   <div id="content" class="col-lg-offset-4 col-md-offset-4 col-lg-6 col-md-6 col-sm-11 col-xs-11">
     <p><a href="/pdfs/resume.pdf">PDF</a></p>
-    <p><a href="/pdfs/resume_paul_chubinskiy.docx">Word</a></p>
+    <p><a href="/pdfs/resume.docx">Word</a></p>
     <br>
     <br>
   </div>
