taking out gray border from previous commit

--- a/otherart.html
+++ b/otherart.html
@@ -43,7 +43,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
-          <img style="border-width: 2px; border-color: lightgray; border-style: solid;" class="artdesign" src="/images/otherart/16_saves_long.jpg" style="">
+          <img class="artdesign" src="/images/otherart/16_saves_long.jpg" style="">
         </a>
       </div>
 
@@ -56,7 +56,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
-          <img style="border-width: 2px; border-color: lightgray; border-style: solid;" class="artdesign" src="/images/otherart/16_saves.jpg" style="">
+          <img class="artdesign" src="/images/otherart/16_saves.jpg" style="">
         </a>
       </div>
 
@@ -69,7 +69,7 @@
     <div id="content" class="row col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9 col-sm-12 col-xs-12">
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <a href="">
-          <img style="border-width: 2px; border-color: lightgray; border-style: solid;" class="artdesign" src="/images/otherart/bronze_silver_gold.jpg" style="">
+          <img class="artdesign" src="/images/otherart/bronze_silver_gold.jpg" style="">
         </a>
       </div>
 
