changing web page; deleting last row

--- a/web.html
+++ b/web.html
@@ -130,12 +130,12 @@
 
       <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
         <p class="annotation">
-          <p><a href="http://www.lrngo.com/coolstuff">Landing pages I designed</a> for Houston edtech start-up Lrngo.</p>
+          <p><a href="http://www.lrngo.com/coolstuff">One of many landing pages I designed</a> for Houston edtech start-up Lrngo.</p>
         </p>
       </div>
     </div>
 
-    <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
+<!--     <div id="content" class="row example_set col-lg-offset-3 col-md-offset-3 col-lg-9 col-md-9">
       <a href="http://www.lrngo.com/coolstuff">
         <img class="image2 left1-mini col-lg-2 col-md-2 col-sm-4 col-xs-4" src="/images/lrngo_landing_pages/othercoolstuff2.png" alt="">
       </a>
@@ -170,7 +170,7 @@
       <a href="http://www.lrngo.com/sports-fitness">
         <img class="image2 mini col-lg-2 col-md-2 col-sm-4 col-xs-4 hidden-sm hidden-xs" src="/images/lrngo_landing_pages/sportsfitness2.png" alt="">
       </a>
-    </div>
+    </div> -->
 
     <div id="whitespace" class="row">
       <br/>
